--- a/docs/_layouts/practicehack.html
+++ b/docs/_layouts/practicehack.html
@@ -18,9 +18,8 @@
 			<div class="Home"><a href="index">Home</a></div>
 			<div class="Links">
 				<ul>
-					<li><a href="updates" target="_blank">Change log</a></li>
-					<li><a href="https://spannerisms.github.io/" target="_blank">Blog</a></li>
-					<li><a href="https://discord.gg/FZsX6HPZw5" target="_blank">SMT Rando</a></li>
+					<li><a href="updates">Change log</a></li>
+					<li><a href="https://spannerisms.github.io/">Blog</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -35,9 +34,9 @@
 	<footer>
 		<div class="footerList">
 			<ul>
-				<li><a target="_blank" href="https://github.com/spannerisms/lttphack/">Source</a></li>
-				<li><a target="_blank" href="https://strats.alttp.run">Strat Hub</a></li>
-				<li><a target="_blank" href="https://alttp-wiki.net/">ALttP Wiki</a></li>
+				<li><a href="https://github.com/spannerisms/lttphack/">Source</a></li>
+				<li><a href="https://strats.alttp.run">Strat Hub</a></li>
+				<li><a href="https://alttp-wiki.net/">ALttP Wiki</a></li>
 				<li><a target="_blank" href="https://discord.gg/W69UcDpup8">Discord</a></li>
 			</ul>
 		</div>
