--- a/docs/_layouts/practicehack.html
+++ b/docs/_layouts/practicehack.html
@@ -18,6 +18,7 @@
 			<div class="Home"><a href="index">Home</a></div>
 			<div class="Links">
 				<ul>
+					<li><a href="https://github.com/spannerisms/lttphack/">Source</a></li>
 					<li><a href="updates">Change log</a></li>
 					<li><a href="https://spannerisms.github.io/">Blog</a></li>
 				</ul>
@@ -34,10 +35,11 @@
 	<footer>
 		<div class="footerList">
 			<ul>
-				<li><a href="https://github.com/spannerisms/lttphack/">Source</a></li>
-				<li><a href="https://strats.alttp.run">Strat Hub</a></li>
-				<li><a href="https://alttp-wiki.net/">ALttP Wiki</a></li>
-				<li><a target="_blank" href="https://discord.gg/W69UcDpup8">Discord</a></li>
+				<li><a href="about">About</a></li>
+				<li><a href="download">Download</a></li>
+				<li><a href="usage">Usage</a></li>
+				<li><a href="HELPME">Concerns</a></li>
+				<li><a href="features">Features</a></li>
 			</ul>
 		</div>
 	</footer>
