--- a/docs/_layouts/practicehack.html
+++ b/docs/_layouts/practicehack.html
@@ -31,18 +31,19 @@
 			</div>
 		</div>
 
-
+{% if page.navfooter == "yes" %}
 	<footer>
 		<div class="footerList">
 			<ul>
-				<li><a href="about">About</a></li>
-				<li><a href="download">Download</a></li>
-				<li><a href="usage">Usage</a></li>
-				<li><a href="HELPME">Concerns</a></li>
-				<li><a href="features">Features</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#download">Download</a></li>
+				<li><a href="#usage">Usage</a></li>
+				<li><a href="#HELPME">Concerns</a></li>
+				<li><a href="#features">Features</a></li>
 			</ul>
 		</div>
 	</footer>
+{% endif %}
 
 	</body>
 </html>
