--- a/docs/_layouts/practicehack.html
+++ b/docs/_layouts/practicehack.html
@@ -8,6 +8,11 @@
 		<link rel="stylesheet" href="https://spannerisms.github.io/assets/base.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Courier+Prime&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" type="image/x-icon" href="https://spannerisms.github.io/assets/lj.ico">
+		<meta property="og:title" content="{{ page.title }}" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+		<meta property="og:image" content="https://spannerisms.github.io/assets/bumpkin.png" />
+		<meta property="og:description" content="{{ page.ogdesc | default: "Something with the practice hack." }}">
 	</head>
 
 	<body id="page-top">
